@@ -5,6 +5,7 @@ import app.freerouting.management.segment.*;
 import com.google.gson.GsonBuilder;
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import com.google.gson.Gson;
 
@@ -28,39 +29,47 @@ public class SegmentClient {
       return;
     }
 
-    new Thread(() ->
-    {
-      try {
-      // Serialize to JSON using GSON
-      String jsonPayload = GSON.toJson(payload);
+    new Thread(
+            () -> {
+              try {
+                // Serialize to JSON using GSON
+                String jsonPayload = GSON.toJson(payload);
 
-      // Create and configure HTTP connection
-      URL url = new URL(endpoint);
-      HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-      connection.setRequestMethod("POST");
-      connection.setRequestProperty("Content-Type", "application/json; utf-8");
-      connection.setRequestProperty("Authorization", "Basic " + java.util.Base64.getEncoder().encodeToString((WRITE_KEY + ":").getBytes()));
-      connection.setDoOutput(true);
+                // Create and configure HTTP connection
+                URL url = new URI(endpoint).toURL();
 
-      // Write JSON payload to request
-      try(OutputStream os = connection.getOutputStream()) {
-        byte[] input = jsonPayload.getBytes("utf-8");
-        os.write(input, 0, input.length);
-      }
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("POST");
+                connection.setRequestProperty("Content-Type", "application/json; utf-8");
+                connection.setRequestProperty(
+                    "Authorization",
+                    "Basic "
+                        + java.util.Base64.getEncoder()
+                            .encodeToString((WRITE_KEY + ":").getBytes()));
+                connection.setDoOutput(true);
 
-      // Read the response
-      try(BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"))) {
-        StringBuilder response = new StringBuilder();
-        String responseLine;
-        while ((responseLine = br.readLine()) != null) {
-          response.append(responseLine.trim());
-        }
-        //return response.toString();
-      }
-      } catch (Exception e) {
-        //FRLogger.error("Exception in SegmentClient.send_payload_async: " + e.getMessage(), e);
-      }
-    }).start();
+                // Write JSON payload to request
+                try (OutputStream os = connection.getOutputStream()) {
+                  byte[] input = jsonPayload.getBytes("utf-8");
+                  os.write(input, 0, input.length);
+                }
+
+                // Read the response
+                try (BufferedReader br =
+                    new BufferedReader(
+                        new InputStreamReader(connection.getInputStream(), "utf-8"))) {
+                  StringBuilder response = new StringBuilder();
+                  String responseLine;
+                  while ((responseLine = br.readLine()) != null) {
+                    response.append(responseLine.trim());
+                  }
+                  // return response.toString();
+                }
+              } catch (Exception e) {
+                //FRLogger.error("Exception in SegmentClient.send_payload_async: " + e.getMessage(), e);
+              }
+            })
+        .start();
   }
 
   public void identify(String userId, String anonymousId, Traits traits) throws IOException {
